@@ -1,5 +1,7 @@
 package com.example.apijava.service.impl;
 
+import com.example.apijava.dto.CachedPage;
+import com.example.apijava.dto.CategoryDto;
 import com.example.apijava.dto.ImageDto;
 import com.example.apijava.dto.ProductDto;
 import com.example.apijava.models.Category;
@@ -16,33 +18,41 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.stereotype.Service;
 import org.modelmapper.ModelMapper;
 
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class ProductServiceImpl implements ProductService {
     private final ProductRepository productRepository;
     private final CategoryRepository categoryRepository;
+    private final RedisTemplate<String, Object> redisTemplate;
+    private static final String PRODUCT_KEY = "product";
 
-    private ModelMapper modelMapper;
+
+    private final ModelMapper modelMapper;
     private final ImageRepository imageRepository;
 
     @Autowired
-    public ProductServiceImpl(ProductRepository productRepository, CategoryRepository categoryRepository, ImageRepository imageRepository) {
+    public ProductServiceImpl(ProductRepository productRepository, CategoryRepository categoryRepository, RedisTemplate<String, Object> redisTemplate, ImageRepository imageRepository) {
         this.productRepository = productRepository;
         this.categoryRepository = categoryRepository;
+        this.redisTemplate = redisTemplate;
         this.imageRepository = imageRepository;
         this.modelMapper = new ModelMapper();
     }
 
     @Override
     public Product addProduct(AddProductRequest productRequest) {
-        // Validate input
+
         if (productRequest.getCategories() == null || productRequest.getCategories().isEmpty()) {
             throw new RuntimeException("Categories not found");
         }
+
 
         List<Category> categories = productRequest.getCategories().stream().map(categoryRequest -> {
             Category existingCategory = categoryRepository.findByCategoryName(categoryRequest.getCategoryName());
@@ -56,26 +66,22 @@ public class ProductServiceImpl implements ProductService {
             }
         }).toList();
 
-        Product newProduct = new Product(
-                productRequest.getName(),
-                productRequest.getDescription(),
-                productRequest.getStock(),
-                productRequest.getPrice(),
-                categories
-        );
+        Product newProduct = new Product(productRequest.getName(), productRequest.getDescription(), productRequest.getStock(), productRequest.getPrice(), categories);
 
-        return productRepository.save(newProduct);
+        //save redis
+        Product saveProduct = productRepository.save(newProduct);
+        String key = PRODUCT_KEY + ":" + saveProduct.getId();
+        redisTemplate.opsForValue().set(key, saveProduct);
+
+        return saveProduct;
     }
 
     @Override
-    public Product updateProduct(ProductUpdateRequest product, Long id) {
-        return productRepository.findById(id)
-                .map(existingProduct -> updateProduct(existingProduct, product))
-                .map(productRepository::save)
-                .orElseThrow(() -> new RuntimeException("Product not found"));
+    public Product updateProduct(ProductUpdateRequest productUpdateRequest, Long id) {
+        return productRepository.findById(id).map(existingProduct -> updateProductDetails(existingProduct, productUpdateRequest)).map(productRepository::save).orElseThrow(() -> new RuntimeException("Product not found"));
     }
 
-    private Product updateProduct(Product existingProduct, ProductUpdateRequest productUpdateRequest) {
+    private Product updateProductDetails(Product existingProduct, ProductUpdateRequest productUpdateRequest) {
         existingProduct.setName(productUpdateRequest.getName());
         existingProduct.setDescription(productUpdateRequest.getDescription());
         existingProduct.setPrice(productUpdateRequest.getPrice());
@@ -85,10 +91,10 @@ public class ProductServiceImpl implements ProductService {
             throw new RuntimeException("Categories cannot be null or empty");
         }
 
-        Category category = categoryRepository.findByCategoryName(productUpdateRequest.getCategories().getFirst().getCategoryName());
+        Category category = categoryRepository.findByCategoryName(productUpdateRequest.getCategories().get(0).getCategoryName());
 
         if (category == null) {
-            throw new RuntimeException("Category not found: ");
+            throw new RuntimeException("Category not found: " + productUpdateRequest.getCategories().get(0).getCategoryName());
         }
 
         existingProduct.setCategories(List.of(category));
@@ -98,27 +104,66 @@ public class ProductServiceImpl implements ProductService {
 
     @Override
     public void deleteProductById(Long id) {
-        productRepository.findById(id)
-                .ifPresentOrElse(productRepository::delete,
-                        () -> {
-                            throw new RuntimeException("Product not found");});
+        productRepository.findById(id).ifPresentOrElse(product -> {
+            productRepository.delete(product);
+            clearCache(product.getId());
+        }, () -> {
+            throw new RuntimeException("Product not found");
+        });
     }
 
     @Override
-    public Page<Product> searchProduct(String keyword, Integer pageNO) {
+    public Page<ProductDto> searchProduct(String keyword, Integer pageNO) {
+        String key = PRODUCT_KEY + ":pageNo:" + pageNO + ":keyword:" + keyword;
+
+        // Query vào cache // cache vẫn phải để page
+        CachedPage<ProductDto> cachedPage = (CachedPage<ProductDto>) redisTemplate.opsForValue().get(key);
+        if (cachedPage != null) {
+            return new PageImpl<>(cachedPage.getContent(), PageRequest.of(pageNO - 1, 10), cachedPage.getTotalElements());
+        }
+
+        // Query db
         List<Product> fullList = productRepository.searchProducts(keyword);
+        List<ProductDto> productDtoList = fullList.stream()
+                .map(this::convertToDto)
+                .collect(Collectors.toList());
         Pageable pageable = PageRequest.of(pageNO - 1, 10);
-        int start = Math.min((int) pageable.getOffset(), fullList.size());
-        int end = Math.min(start + pageable.getPageSize(), fullList.size());
-        List<Product> pageList = fullList.subList(start, end);
-        return new PageImpl<>(pageList, pageable, fullList.size());
+        int start = Math.min((int) pageable.getOffset(), productDtoList.size());
+        int end = Math.min(start + pageable.getPageSize(), productDtoList.size());
+        // Phải chuyền array moi chay ?
+        List<ProductDto> productDtos = new ArrayList<>(productDtoList.subList(start, end));
+
+        Page<ProductDto> pageList = new PageImpl<>(productDtos, pageable, productDtoList.size());
+
+        // Convert to CachedPage and store in Redis
+        CachedPage<ProductDto> cache = new CachedPage<>(productDtos, productDtoList.size());
+        redisTemplate.opsForValue().set(key, cache);
+
+        return pageList;
     }
 
+
     @Override
-    public Page<Product> getAllProduct(Integer pageNO) {
-        Pageable pageable = PageRequest.of(pageNO - 1, 6);
-        return this.productRepository.findAll(pageable);
+    public Page<ProductDto> getAllProduct(Integer pageNo) {
+        String key = PRODUCT_KEY + ":pageNo:" + pageNo;
+
+        CachedPage<ProductDto> cachedPage = (CachedPage<ProductDto>) redisTemplate.opsForValue().get(key);
+        if (cachedPage != null) {
+            return new PageImpl<>(cachedPage.getContent(), PageRequest.of(pageNo - 1, 10), cachedPage.getTotalElements());
+        }
+
+        Pageable pageable = PageRequest.of(pageNo - 1, 10);
+        Page<Product> page = productRepository.findAll(pageable);
+
+        List<ProductDto> productDtos = page.getContent().stream()
+                .map(this::convertToDto)
+                .toList();
+
+        CachedPage<ProductDto> cacheData = new CachedPage<>(productDtos, page.getTotalElements());
+        redisTemplate.opsForValue().set(key, cacheData);
+        return new PageImpl<>(productDtos, pageable, page.getTotalElements());
     }
+
 
     @Override
     public Page<Product> getByCategory(Long id, Integer pageNO) {
@@ -132,19 +177,41 @@ public class ProductServiceImpl implements ProductService {
     }
 
     @Override
-    public ProductDto convertToDto(Product product) {
-        ProductDto productDto = modelMapper.map(product, ProductDto.class);
-        List<Image> images = imageRepository.findByProductId(product.getId());
-        List<ImageDto> imageDto = images.stream()
-                .map(image -> modelMapper.map(image, ImageDto.class))
-                .toList();
-        productDto.setImages(imageDto);
+    public ProductDto getProductById(Long id) {
+        String key = PRODUCT_KEY + ":" + id;
+        ProductDto cachedProductDto = (ProductDto) redisTemplate.opsForValue().get(key);
+        if (cachedProductDto != null) {
+            return cachedProductDto;
+        }
+
+        Product product = productRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Product not found"));
+
+        // Convert Product to DTO before storing in Redis
+        ProductDto productDto = convertToDto(product);
+        redisTemplate.opsForValue().set(key, productDto);
         return productDto;
     }
 
     @Override
-    public Product getProductById(Long id) {
-        return productRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Product not found"));
+    public ProductDto convertToDto(Product product) {
+        ProductDto productDto = modelMapper.map(product, ProductDto.class);
+
+        // Fetch and set images
+        List<Image> images = imageRepository.findByProductId(product.getId());
+        List<ImageDto> imageDto = images.stream().map(image -> modelMapper.map(image, ImageDto.class)).toList();
+        productDto.setImages(imageDto);
+
+        List<CategoryDto> categoryDtoList = product.getCategories().stream()
+                .map(category -> modelMapper.map(category, CategoryDto.class))
+                .toList();
+        productDto.setCategories(categoryDtoList);
+
+        return productDto;
+    }
+
+    private void clearCache(Long id) {
+        String key = PRODUCT_KEY + ":" + id;
+        redisTemplate.delete(key);
     }
 }
